# skills-introduction-to-github

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  HELLO.md  LICENSE  Makefile  README.md  README_GO.md  SMOKE-T22.md  app.py  docker-compose.yml  go.mod  login.py  package.json  pyproject.toml  requirements.txt  run.py  test_app.py  test_login.py
.github/steps/: 1-create-a-branch.md  2-commit-a-file.md  3-open-a-pull-request.md  4-merge-your-pull-request.md
app/: __init__.py  audit.py  auth.py  config.py  database.py  db.py  dependencies.py  email_service.py  email_utils.py  extensions.py  main.py  models.py  rate_limiter.py  redis_client.py  repositories.py  schemas.py  security.py
app/api/: deps.py
app/auth/: routes.py  service.py
app/core/: config.py  redis_client.py  security.py
app/models/: user.py
app/routers/: auth.py  login.py  profile.py
app/services/: email_service.py  verification.py
backend/: api.md  requirements-dev.txt  requirements.txt
backend/app/: main.py
backend/tests/: conftest.py  test_payments.py
cmd/api/: main.py
config/: config.py
docker/: Dockerfile
docs/: AUTH.md  TEST-EVENTS.md  user-guide.md
frontend/: button.md
go/: go.mod  main.go
infra/: app.py
mobile/: pubspec.yaml
src/: app.js  main.py  schemas.py
tests/: conftest.py  test_audit.py  test_auth_service.py  test_hello.py  test_login.py  test_login_endpoint.py  test_models.py  test_orders.py  test_preferences.py  test_profile_email.py  test_rate_limiter.py  test_reset_password.py  test_security.py
user/: user.go  user_test.go
(+62 files in other folders)
